# kubernetes-mcp

document-processor/: CMakeLists.txt  vcpkg.json
document-processor/src/: Cleaner.cpp  Cleaner.h  DocumentChunker.cpp  DocumentChunker.h  main.cpp
document-processor/src/api/: EmbeddingGenerator.cpp  EmbeddingGenerator.h  GitHubClient.cpp  GitHubClient.h
